--- a/backend/package.json
+++ b/backend/package.json
@@ -17,18 +17,18 @@
   "author": "Gokila",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0",
-    "xlsx": "^0.18.5",
+    "nodemailer": "^6.9.7",
     "pdfkit": "^0.13.0",
-    "exceljs": "^4.3.0",
-    "nodemailer": "^6.9.7"
+    "pg": "^8.11.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
